000 - Ajustes de impressão e rever em arquvi do CeCred

--- a/BoletoNetCore/BoletoImpressao/Parts/CabecalhoTabelaDemonstrativo.html
+++ b/BoletoNetCore/BoletoImpressao/Parts/CabecalhoTabelaDemonstrativo.html
@@ -1,7 +1,7 @@
 ﻿
 <table class="w666">
     <tr class="rBb">
-        <td class="Ac ld" colspan="4">Demonstrativo</td>
+        <td class="Ac ld" colspan="4" style="font-size: 12px">Demonstrativo</td>
     </tr>
     <tr class="ct">
         <td class="w62"></td>
