--- a/BoletoNetCore/BoletoImpressao/Parts/GrupoDemonstrativo.html
+++ b/BoletoNetCore/BoletoImpressao/Parts/GrupoDemonstrativo.html
@@ -1,6 +1,6 @@
 ﻿<tr class="ct">
-    <td class="cp">@DESCRICAOGRUPO</td>
-    <td>@DESCRICAOITEM</td>
-    <td>@REFERENCIAITEM</td>
-    <td>@VALORITEM</td>
+    <td class="cp ld" style="font-size: 12px">@DESCRICAOGRUPO</td>
+    <td style="font-size: 12px">@DESCRICAOITEM</td>
+    <td style="font-size: 12px">@REFERENCIAITEM</td>
+    <td style="font-size: 12px">@VALORITEM</td>
 </tr>
