--- a/BoletoNetCore/BoletoImpressao/Parts/ReciboBeneficiarioRelatorioValores.html
+++ b/BoletoNetCore/BoletoImpressao/Parts/ReciboBeneficiarioRelatorioValores.html
@@ -1,7 +1,7 @@
 ﻿
 <table class="w666">
     <tr class="BHead BT2">
-        <td class="imgLogo Al"><img src="@URLIMAGEMLOGO" /></td>
+        <td class="imgLogo Al"><img src="@URLIMGBENEFICIARIO" /></td>
         <td class="barra"><img src="@URLIMAGEMBARRA" /></td>
         <td class="w65 Ab bc Ac">@CODIGOBANCO-@DIGITOBANCO</td>
         <td class="barra"><img src="@URLIMAGEMBARRA" /></td>
