--- a/BoletoNetCore/BoletoImpressao/Parts/TotalDemonstrativo.html
+++ b/BoletoNetCore/BoletoImpressao/Parts/TotalDemonstrativo.html
@@ -1,6 +1,6 @@
 ﻿<tr class="cp h13 rBb">
-    <td>Total</td>
+    <td style="font-size: 12px">Total</td>
     <td></td>
     <td></td>
-    <td>@VALORTOTALGRUPO</td>
+    <td style="font-size: 12px">@VALORTOTALGRUPO</td>
 </tr>
